--- a/src/App/UI/components/MainContainer/MainContainer.css
+++ b/src/App/UI/components/MainContainer/MainContainer.css
@@ -9,3 +9,32 @@
     background-position: center;
     background-size: cover;
 }
+
+.header{
+    color: #B87E0B;
+    text-align: center;
+    letter-spacing: 2px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 80px;
+    margin-top: 150px;
+    font-weight: 800;
+}
+
+.buttonStyle{
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+    gap: 20px;
+}
+
+.subtitle{
+    color: #ffffff;
+    text-align: center;
+    font-size: 22px;
+    margin-top: 20px;
+    padding-left: 150px;
+    padding-right: 150px;
+    font-family: 'Times New Roman', Times, serif;
+    letter-spacing: 2px;
+    line-height: 30px;
+}
