--- a/src/App/UI/components/NavBar/NavBar.css
+++ b/src/App/UI/components/NavBar/NavBar.css
@@ -61,6 +61,11 @@
     border-radius: 5px;
 }
 
+.navUlArightButton:hover{
+    color: #B87E0B;
+    background-color: #ffffff;
+}
+
 .logoP{
     color: #ffffff;
     font-size: 20px;
