--- a/src/App/UI/pages/Home/Home.css
+++ b/src/App/UI/pages/Home/Home.css
@@ -35,11 +35,26 @@
   gap: 20px;
 }
 
+.middleContainerDivTwo {
+    padding-left: 150px;
+    padding-right: 150px;
+    padding-top: 50px;
+    align-items: center;
+    gap: 20px;
+  }
+
 .middleHeading {
   text-align: center;
   font-size: 50px;
   font-family: "Times New Roman", Times, serif;
 }
+
+.middleHeadingTwo {
+    text-align: left;
+    font-size: 50px;
+    font-family: "Times New Roman", Times, serif;
+    margin-bottom: 40px;
+  }
 
 .middleParagraph {
   text-align: center;
@@ -83,11 +98,13 @@
 .headings {
   font-family: "Times New Roman", Times, serif;
   letter-spacing: 2px;
+  padding-bottom: 10px;
 }
 
 .paragraph {
   font-family: "Times New Roman", Times, serif;
   letter-spacing: 2px;
+  margin-bottom: 20px;
 }
 
 .contactDiv {
@@ -125,4 +142,11 @@
   background-color: #ffffff;
   border: 1px solid #ffffff;
   cursor: pointer;
+}
+
+.services{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    margin-bottom: 40px;
 }
